# axum-practice

./: Cargo.toml
crates/rest/: Cargo.toml
crates/rest/src/: main.rs
crates/usecase/: Cargo.toml
crates/usecase/src/: get_todos.rs
src/: main.rs
