[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
serde = { version = "1.0.190", features = ["derive"] }
